--- a/packages/glpk/hmatrix-glpk.cabal
+++ b/packages/glpk/hmatrix-glpk.cabal
@@ -22,7 +22,7 @@ extra-source-files:     examples/simplex1.hs
                         examples/simplex4.hs
 
 library
-    Build-Depends:      base >= 3 && < 5, hmatrix >= 0.8.3
+    Build-Depends:      base >= 3 && < 5, hmatrix >= 0.8.3 && < 0.9
 
     hs-source-dirs:     lib
 
