--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.8.3.2
+Version:            0.8.4.0
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -42,6 +42,7 @@ extra-source-files: examples/tests.hs
                     examples/devel/ej2/wrappers.hs
                     examples/devel/ej2/functions.c
                     examples/Real.hs
+                    examples/vector.hs
 
 extra-source-files: lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.h,
                     lib/Numeric/LinearAlgebra/LAPACK/clapack.h
