--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.9.1.0
+Version:            0.9.2.0
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -79,6 +79,7 @@ library
                         Numeric.GSL.Polynomials,
                         Numeric.GSL.Minimization,
                         Numeric.GSL.Root,
+                        Numeric.GSL.Fitting,
                         Numeric.GSL.ODE,
                         Numeric.GSL.Vector,
                         Numeric.GSL,
