--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -51,6 +51,10 @@ flag tests
     description:    Build tests
     default:        True
 
+flag dd
+    description:    svd = zgesdd
+    default:        True
+
 flag mkl
     description:    Link with Intel's MKL optimized libraries.
     default:        False
@@ -118,6 +122,9 @@ library
 
     if flag(unsafe)
         cpp-options: -DUNSAFE
+
+    if !flag(dd)
+        cpp-options: -DNOZGESDD
 
     if impl(ghc < 6.10.2)
         cpp-options: -DFINIT
