app5-10, some SCC, and other minor changes

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -114,7 +114,7 @@ library
        other-modules:   Numeric.LinearAlgebra.Tests.Instances,
                         Numeric.LinearAlgebra.Tests.Properties
 
-    ghc-prof-options:   -auto
+ -- ghc-prof-options:   -auto
 
     ghc-options:        -Wall -fno-warn-missing-signatures
                               -fno-warn-orphans
@@ -140,15 +140,9 @@ library
         include-dirs: /opt/local/include
         extra-libraries: gsl
         frameworks: Accelerate
-        
-    if os(windows)
-        extra-libraries: libgsl-0 blas lapack
-        extra-lib-dirs: ./gsl-lapack-windows
-        include-dirs: ./gsl-lapack-windows
 
 -- The extra-libraries required for GSL and LAPACK
 -- should now be automatically detected by configure(.hs)
-
 
     extra-libraries:
     extra-lib-dirs:
@@ -156,3 +150,4 @@ library
     source-repository head
         type:     darcs
         location: http://code.haskell.org/hmatrix
+
