--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.9.2.0
+Version:            0.9.3.0
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -10,6 +10,8 @@ Synopsis:           Linear algebra and numerical computation
 Description:        Purely functional interface to basic linear algebra
                     and other numerical computations, internally implemented using
                     GSL, BLAS and LAPACK.
+                    .
+                    See also hmatrix-special and hmatrix-glpk.
 Category:           Math
 tested-with:        GHC ==6.10.4, GHC ==6.12.1
 
@@ -89,8 +91,6 @@ library
                         Numeric.GSL,
                         Numeric.LinearAlgebra,
                         Numeric.LinearAlgebra.LAPACK,
-                        Numeric.LinearAlgebra.Linear,
-                        Numeric.LinearAlgebra.Instances,
                         Numeric.LinearAlgebra.Interface,
                         Numeric.LinearAlgebra.Algorithms,
                         Graphics.Plot,
@@ -103,6 +103,8 @@ library
                         Data.Packed.Internal.Signatures,
                         Data.Packed.Internal.Vector,
                         Data.Packed.Internal.Matrix,
+                        Numeric.LinearAlgebra.Linear,
+                        Numeric.LinearAlgebra.Instances,
                         Numeric.GSL.Internal
 
     C-sources:          lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.c,
@@ -140,6 +142,9 @@ library
         include-dirs: /opt/local/include
         extra-libraries: gsl
         frameworks: Accelerate
+
+    if os(windows)
+        extra-libraries: gsl-0 blas lapack
 
 -- The extra-libraries required for GSL and LAPACK
 -- should now be automatically detected by configure(.hs)
