--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.9.3.0
+Version:            0.10.0.0
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -74,7 +74,8 @@ library
     Build-Depends:      base >= 4 && < 5,
                         array,
                         storable-complex,
-                        process
+                        process,
+                        ghc-binary
 
     Extensions:         ForeignFunctionInterface,
                         CPP
