--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -72,7 +72,7 @@ flag vector
 library
 
     Build-Depends:      base >= 4 && < 5,
-                        array,
+                        array, mtl,
                         storable-complex,
                         process,
                         ghc-binary
