--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -76,7 +76,7 @@ library
                         array, mtl,
                         storable-complex,
                         process,
-                        ghc-binary
+                        binary
 
     Extensions:         ForeignFunctionInterface,
                         CPP
