refactor Numeric Vector/Matrix and classes

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -95,11 +95,13 @@ library
                         Numeric.GSL.ODE,
                         Numeric.GSL.Vector,
                         Numeric.GSL,
+                        Numeric.Vector,
+                        Numeric.Matrix,
+                        Numeric.Container,
                         Numeric.LinearAlgebra,
                         Numeric.LinearAlgebra.LAPACK,
                         Numeric.LinearAlgebra.Interface,
                         Numeric.LinearAlgebra.Linear,
-                        Numeric.LinearAlgebra.Instances,
                         Numeric.LinearAlgebra.Algorithms,
                         Graphics.Plot,
                      -- Data.Packed.Convert,
