--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -115,6 +115,7 @@ library
                         Data.Packed.Internal.Matrix,
                         Numeric.GSL.Internal,
                         Numeric.Conversion
+                        Numeric.MatrixBoot
                         Numeric.Chain
 
     C-sources:          lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.c,
