option -f-binary (for testing ghc7)

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -78,13 +78,16 @@ flag vector
     description:    Use Data.Vector.Storable type from "vector" package.
     default:        False
 
+flag binary
+    description:    Define Binary instances
+    default:        True
+
 library
 
     Build-Depends:      base >= 4 && < 5,
                         array,
                         storable-complex,
-                        process,
-                        binary
+                        process
 
     Extensions:         ForeignFunctionInterface,
                         CPP
@@ -130,6 +133,10 @@ library
     if flag(vector)
        Build-Depends:   vector >= 0.7
        cpp-options:     -DVECTOR
+
+    if flag(binary)
+       Build-Depends:   binary
+       cpp-options:     -DBINARY
 
     if flag(tests)
        Build-Depends:   QuickCheck, HUnit, random
