--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -83,6 +83,10 @@ flag binary
     description:    Define Binary instances
     default:        True
 
+flag finit
+    description:    Force FPU initialization in foreing calls
+    default:        False
+
 library
 
     Build-Depends:      base >= 4 && < 5,
@@ -160,8 +164,12 @@ library
     if impl(ghc < 6.10.2)
         cpp-options: -DFINIT
 
+    if flag(finit)
+        cpp-options: -DFINIT
+
     if impl(ghc == 7.0.1)
         cpp-options: -DNONORMVTEST
+        cpp-options: -DFINIT
 
     if flag(mkl)
       if arch(x86_64)
