--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.11.0.0
+Version:            0.11.0.1
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -181,7 +181,8 @@ library
         extra-lib-dirs: /opt/local/lib/
         include-dirs: /opt/local/include
         extra-libraries: gsl
-        cc-options: -arch i386
+        if arch(i386)
+            cc-options: -arch i386
         frameworks: Accelerate
 
     if os(windows)
