--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -5,7 +5,7 @@ License-file:       LICENSE
 Author:             Alberto Ruiz
 Maintainer:         Alberto Ruiz <aruiz@um.es>
 Stability:          provisional
-Homepage:           http://code.haskell.org/hmatrix
+Homepage:           http://perception.inf.um.es/hmatrix
 Synopsis:           Linear algebra and numerical computation
 Description:        Purely functional interface to basic linear algebra
                     and other numerical computations, internally implemented using
@@ -196,5 +196,6 @@ library
 
 source-repository head
     type:     darcs
-    location: http://code.haskell.org/hmatrix
+    location: http://patch-tag.com/r/aruiz/hmatrix
+--    location: http://code.haskell.org/hmatrix
 
