--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -179,7 +179,9 @@ library
 
     if os(OSX)
         extra-lib-dirs: /opt/local/lib/
-        include-dirs: /opt/local/include
+        include-dirs: /opt/local/include/
+        extra-lib-dirs: /usr/local/lib/
+        include-dirs: /usr/local/include/
         extra-libraries: gsl
         if arch(i386)
             cc-options: -arch i386
