--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -171,7 +171,10 @@ library
     if impl(ghc < 6.10.2)
         cpp-options: -DFINIT
 
-    if impl(ghc >= 7.0.1)
+    if impl(ghc == 7.0.1)
+        cpp-options: -DFINIT
+
+    if impl(ghc == 7.0.2)
         cpp-options: -DFINIT
 
     if flag(finit)
