--- a/packages/glpk/hmatrix-glpk.cabal
+++ b/packages/glpk/hmatrix-glpk.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix-glpk
-Version:            0.2.1
+Version:            0.2.2
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -11,7 +11,7 @@ Description:
  Simple interface to linear programming functions provided by GLPK.
 
 Category:           Math
-tested-with:        GHC ==6.10.4
+tested-with:        GHC ==6.10.4, GHC ==7.0.3
 
 cabal-version:      >=1.2
 build-type:         Simple
@@ -22,7 +22,7 @@ extra-source-files:     examples/simplex1.hs
                         examples/simplex4.hs
 
 library
-    Build-Depends:      base >= 3 && < 5, hmatrix >= 0.8.3 && < 0.11
+    Build-Depends:      base >= 3 && < 5, hmatrix >= 0.8.3
 
     hs-source-dirs:     lib
 
