--- a/packages/special/hmatrix-special.cabal
+++ b/packages/special/hmatrix-special.cabal
@@ -5,7 +5,7 @@ License-file:       LICENSE
 Author:             Alberto Ruiz
 Maintainer:         Alberto Ruiz <aruiz@um.es>
 Stability:          experimental
-Homepage:           http://code.haskell.org/hmatrix
+Homepage:           http://perception.inf.um.es/hmatrix
 Synopsis:           Interface to GSL special functions
 Description:
  Interface to GSL special functions.
