--- a/packages/tests/hmatrix-tests.cabal
+++ b/packages/tests/hmatrix-tests.cabal
@@ -11,7 +11,7 @@ Description:        Tests for hmatrix
 Category:           Math
 tested-with:        GHC==7.0.4
 
-cabal-version:      >=1.6
+cabal-version:      >=1.8
 
 build-type:         Simple
 
@@ -38,7 +38,8 @@ source-repository head
     type:     git
     location: https://github.com/AlbertoRuiz/hmatrix
 
-Test-Suite tests
+Test-Suite basic
+    Build-Depends: base, hmatrix-tests
     type: exitcode-stdio-1.0
     main-is: src/tests.hs
 
