--- a/packages/tests/hmatrix-tests.cabal
+++ b/packages/tests/hmatrix-tests.cabal
@@ -5,11 +5,11 @@ License-file:       LICENSE
 Author:             Alberto Ruiz
 Maintainer:         Alberto Ruiz <aruiz@um.es>
 Stability:          provisional
-Homepage:           http://perception.inf.um.es/hmatrix
+Homepage:           https://github.com/albertoruiz/hmatrix
 Synopsis:           Tests for hmatrix
 Description:        Tests for hmatrix
 Category:           Math
-tested-with:        GHC==7.0.4
+tested-with:        GHC==7.4
 
 cabal-version:      >=1.8
 
@@ -36,7 +36,7 @@ library
 
 source-repository head
     type:     git
-    location: https://github.com/AlbertoRuiz/hmatrix
+    location: https://github.com/albertoruiz/hmatrix
 
 Test-Suite basic
     Build-Depends: base, hmatrix-tests
