--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -49,7 +49,6 @@ extra-source-files: examples/deriv.hs
                     examples/devel/ej1/functions.c
                     examples/devel/ej2/wrappers.hs
                     examples/devel/ej2/functions.c
-                    examples/Real.hs
                     examples/vector.hs
                     examples/monadic.hs
                     examples/bool.hs
@@ -87,7 +86,7 @@ library
     Build-Depends:      base >= 4 && < 5,
                         array,
                         storable-complex,
-                        process,
+                        process, random,
                         vector >= 0.8,
                         binary
 
@@ -111,6 +110,7 @@ library
                         Numeric.LinearAlgebra,
                         Numeric.LinearAlgebra.LAPACK,
                         Numeric.LinearAlgebra.Algorithms,
+                        Numeric.LinearAlgebra.Real,
                         Graphics.Plot,
                         Data.Packed.ST,
                         Data.Packed.Development
