rename module to Util, some changes, add cross product and disp

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -110,7 +110,7 @@ library
                         Numeric.LinearAlgebra,
                         Numeric.LinearAlgebra.LAPACK,
                         Numeric.LinearAlgebra.Algorithms,
-                        Numeric.LinearAlgebra.Real,
+                        Numeric.LinearAlgebra.Util,
                         Graphics.Plot,
                         Data.Packed.ST,
                         Data.Packed.Development
