--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -1,5 +1,5 @@
 Name:               hmatrix
-Version:            0.14.0.0
+Version:            0.14.0.1
 License:            GPL
 License-file:       LICENSE
 Author:             Alberto Ruiz
@@ -56,6 +56,7 @@ extra-source-files: examples/deriv.hs
 
 extra-source-files: lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.h,
                     lib/Numeric/LinearAlgebra/LAPACK/clapack.h
+                    lib/Numeric/GSL/gsl-ode.c
 
 flag dd
     description:    svd = zgesdd
