Remove the old (non Data.Vector) code and ifdefs
This is a complete no-op, it just removes dead code. The old (non
Data.Vector.Storable) implementation can no longer be selected, and this
change removes all the remaining portions of it.

--- a/hmatrix.cabal
+++ b/hmatrix.cabal
@@ -134,7 +134,7 @@ library
     C-sources:          lib/Numeric/LinearAlgebra/LAPACK/lapack-aux.c,
                         lib/Numeric/GSL/gsl-aux.c
 
-    cpp-options:        -DVECTOR -DBINARY
+    cpp-options:        -DBINARY
 
  -- ghc-prof-options:   -auto
 
